target/release/build/cap-primitives-8d821856d9c6c5d6/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> <anon>:1:12
  |
1 | #![feature(windows_by_handle)]
  |            ^^^^^^^^^^^^^^^^^

error[E0635]: unknown feature `windows_by_handle`
 --> <anon>:1:12
  |
1 | #![feature(windows_by_handle)]
  |            ^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0554, E0635.
For more information about an error, try `rustc --explain E0554`.
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> <anon>:1:12
  |
1 | #![feature(windows_file_type_ext)]
  |            ^^^^^^^^^^^^^^^^^^^^^

error[E0635]: unknown feature `windows_file_type_ext`
 --> <anon>:1:12
  |
1 | #![feature(windows_file_type_ext)]
  |            ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0554, E0635.
For more information about an error, try `rustc --explain E0554`.
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> <anon>:1:12
  |
1 | #![feature(io_error_more)]
  |            ^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> <anon>:1:12
  |
1 | #![feature(io_error_uncategorized)]
  |            ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
